Deploy/ubk3s/buildversionsapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: buildversionsapi
  labels:
    app: buildversionsapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: buildversionsapi
  template:
    metadata:
      labels:
        app: buildversionsapi
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
    spec:
      # securityContext:
      #  runAsUser: 0
      #   runAsGroup: 3000
      #   fsGroup: 2000
      containers:
      - name: buildversionsapi
        image: registry:5000/buildversionsapi:latest
        imagePullPolicy: Always
        volumeMounts:
          - name: buildversionsapi-storage
            mountPath: "/data"
        # securityContext:
        #   capabilities:
        #     add: ["NET_ADMIN", "SYS_TIME"]
        ports:
        - containerPort: 80
          name: http
        livenessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 30
          timeoutSeconds: 30
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 30
          timeoutSeconds: 30
        resources:
          requests:
            memory: "128Mi"
            cpu: "16m"
          limits:
            memory: "256Mi"
            cpu: "512m"
      volumes:
        - name: buildversionsapi-storage
          persistentVolumeClaim:
            claimName: buildversionsapi-claim
